--- a/py3/MANIFEST.in
+++ b/py3/MANIFEST.in
@@ -2,9 +2,7 @@
 
 include lh-agpl3-LICENSE.txt
 
-
-include TITLE.txt
-include README.rst
+include README.org
 
 # The line below is needed when data_files are specified in setup.py
 #recursive-include data *
