--- a/py3/requirements.txt
+++ b/py3/requirements.txt
@@ -7,7 +7,7 @@ bisos.platform==0.13
 bisos.siteRegistrars==0.54
 bisos.transit==0.2
 blee==0.3
-blee.icmPlayer==0.5
+bisos.csPlayer==0.5
 enum34==1.1.10
 unisos.icm==0.26
 unisos.ucf==0.15
